Fix product width on mobile

--- a/app/assets/stylesheets/elements/_product.mobile.scss
+++ b/app/assets/stylesheets/elements/_product.mobile.scss
@@ -1,7 +1,7 @@
 @media only screen and (max-width: $small) {
     .product {
-        margin: 1em;
-        width: calc(100% - 2em);
+        margin: 1em 0;
+        width: 100%;
 
         .info .img {
             max-width: none;
